--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         }
         .highlight {
             background-color: rgba(16, 96, 255, .5);
+            font-weight: bold;
         }
         .match.intensity-0 {
             background-color: rgba(16, 96, 255, 0.65);
@@ -213,9 +214,15 @@ BB-8
             //dimension defines a dimension
             //builds x axis based on what "key" is
             var independentAxis = function(table, chart, key) {
-                var dim = table.dimension(function(d) { return +d[key]; });
-                var hi = +dim.top(1)[0][key] + 1;
-                var lo = +dim.bottom(1)[0][key];
+                var modifyAxis = function(d) {
+                    return Math.floor(+d[key]/100);
+                }
+
+                var dim = table.dimension(modifyAxis);
+                //var hi = +dim.top(1)[0][key] + 1;
+                //var lo = +dim.bottom(1)[0][key];
+                var hi = modifyAxis(dim.top(1)[0])+1;
+                var lo = modifyAxis(dim.bottom(1)[0]);
                 chart.x(d3.scale.linear().domain([lo, hi]));
                 chart.xAxisLabel(key);
                 chart.xAxis().tickFormat(d3.format("d"));
@@ -246,9 +253,10 @@ BB-8
             chart.margins({top: 50, right: 50, bottom: 50, left: 50})
                  .brushOn(false)
                  .valueAccessor(sumAccessor)
+                 .gap(0)
                  .on("renderlet.chart", function(chart) {
                      chart.selectAll('rect').on('click', function(d) {
-                     console.log(d.data.key);
+                     //console.log(d.data.key);
                      var highlights = document.getElementsByClassName('highlight');
                      for (var c = 0; c < highlights.length; c++) {
                          highlights[c].setAttribute('class','script-section');
@@ -261,7 +269,7 @@ BB-8
 
             //crossfilter slices row-based data
             var cfTable = crossfilter(rawTable);
-            var indepDim = independentAxis(cfTable, chart, "SCRIPT_SECTION");
+            var indepDim = independentAxis(cfTable, chart, "ORIGINAL_SCRIPT_WORD_INDEX");
 
             var keys = Object.keys(rawTable[0]);
             var sel = document.createElement("select");
@@ -270,7 +278,7 @@ BB-8
                 var key = keys[k];
                 sel.options[sel.options.length] = new Option(key, key);
             }
-            sel.options[0].selected = true;
+            sel.options[1].selected = true;
 
             sel.addEventListener("change", function() {
                 dependentAxis(indepDim, chart, this.value);
@@ -287,76 +295,62 @@ BB-8
                 );
             });
 
-            dependentAxis(indepDim, chart, keys[0]);
+            dependentAxis(indepDim, chart, keys[1]);
 
             d3.csv('data.csv', function(data) {
-              var wordCount =  data [(data.length-1)]["ORIGINAL_SCRIPT_WORD_INDEX"];
-              var sectionCount = data [(data.length-1)]["SCRIPT_SECTION"];
-              var sectionedScript = document.getElementById('script');
-              var punctuation  = [',', '.', '!', '?', '\''];
-              var endpunctuation =  ['.', '!', '?'];
-              var contractions = ['\'ve', '\'m', '\'ll', '\'re', '\'s', '\'t', 'n\'t'];
-              var capitals = ['i'];
-              var namesString = document.getElementById('characters').innerText;
-              var namesList = namesString.split(/(\s+)/);
-              //console.log(namesList);
-              //console.log(sectionCount);
+                var wordCount =  data [(data.length-1)]["ORIGINAL_SCRIPT_WORD_INDEX"];
+                //var sectionCount = data [(data.length-1)]["SCRIPT_SECTION"];
+                var sectionCount = Math.floor(wordCount/100) + 1;
+                var sectionedScript = document.getElementById('script');
 
-              for (var i = 1; i < (sectionCount + 1); i++) {
-                var sectionSpan = document.createElement('span');
-                sectionSpan.setAttribute('class', 'script-sections');
-                sectionSpan.setAttribute('id', 'script-section-' + i);
-                sectionedScript.append(sectionSpan);
-              }
+                //for script formatting
+                var punctuation  = [',', '.', '!', '?', '\''];
+                var endpunctuation =  ['.', '!', '?'];
+                var contractions = ['\'ve', '\'m', '\'ll', '\'re', '\'s', '\'t', 'n\'t'];
+                var capitals = ['i'];
+                var namesString = document.getElementById('characters').innerText;
+                var namesList = namesString.split(/(\s+)/);
 
-
-              for (var j = 0; j < wordCount; j++) {
-                var selectedWord = data [j]["ORIGINAL_SCRIPT_WORD"];
-                //test for empty words
-                if (selectedWord == '') {
-                    //console.log(selectedWord);
-                    selectedWord = data [j]["LOWERCASE"];
-                    console.log(selectedWord);
+                for (var i = 0; i < sectionCount + 1; i++) {
+                    var sectionSpan = document.createElement('span');
+                    sectionSpan.setAttribute('class', 'script-sections');
+                    sectionSpan.setAttribute('id', 'script-section-' + i);
+                    sectionedScript.append(sectionSpan);
                 }
 
-                var section = data [j]["SCRIPT_SECTION"];
-                //var wordIndex = data [j]["ORIGINAL_SCRIPT_WORD_INDEX"]
-                //var section = wordIndex % sectionCount + 1;
-                var selectedSpan = document.getElementById('script-section-' + section);
-                // console.log(selectedSpan);
-                // console.log(selectedWord);
+                for (var j = 0; j < wordCount; j++) {
+                    var selectedWord = data [j]["ORIGINAL_SCRIPT_WORD"];
+                    //test for empty words
+                    if (selectedWord == '') {
+                        selectedWord = data [j]["LOWERCASE"];
+                    }
 
+                    var wordIndex = data [j]["ORIGINAL_SCRIPT_WORD_INDEX"];
+                    var section = Math.floor(wordIndex / 100);
+                    //var section = data [j]["SCRIPT_SECTION"];
+                    var selectedSpan = document.getElementById('script-section-' + section);
 
-                //speaker tags
-                if (j != 0 && (data [j]["CHARACTER"] != data [j-1]["CHARACTER"])) {
-                    selectedSpan.append(document.createTextNode(' ' + data [j]["CHARACTER"] + ': '));
+                    //speaker tags
+                    if (j != 0 && (data [j]["CHARACTER"] != data [j-1]["CHARACTER"])) {
+                        selectedSpan.append(document.createElement('br')); //add newline
+                        selectedSpan.append(document.createTextNode(' ' + data [j]["CHARACTER"] + ': '));
+                    }
+
+                    //formatting
+                    if (punctuation.includes(selectedWord) || contractions.includes(selectedWord)) {  //no space before punctuation
+                        selectedSpan.append(document.createTextNode(selectedWord));
+                    } else if (j != 0 && endpunctuation.includes(data [j-1]["ORIGINAL_SCRIPT_WORD"])) { //capitalize first word of sentence
+                        selectedSpan.append(document.createTextNode(' ' + selectedWord[0].toUpperCase() + selectedWord.slice(1)));
+                    } else if (capitals.includes(selectedWord) || j == 0) { //format things like 'i'
+                        selectedSpan.append(document.createTextNode(' ' + selectedWord.toUpperCase()));
+                    } else if (namesList.includes(selectedWord[0].toUpperCase() + selectedWord.slice(1))) { //format names
+                        selectedSpan.append(document.createTextNode(' ' + selectedWord[0].toUpperCase() + selectedWord.slice(1)));
+                    } else {
+                        selectedSpan.append(document.createTextNode(' ' + selectedWord)); //all other words
+                    }
                 }
-
-                if (punctuation.includes(selectedWord) || contractions.includes(selectedWord)) {
-                    selectedSpan.append(document.createTextNode(selectedWord));
-                } else if (j != 0 && endpunctuation.includes(data [j-1]["WORD"])) {
-                    selectedSpan.append(document.createTextNode(' ' + selectedWord[0].toUpperCase() + selectedWord.slice(1)));
-                } else if (capitals.includes(selectedWord) || j == 0) {
-                    selectedSpan.append(document.createTextNode(' ' + selectedWord.toUpperCase()));
-                } else if (namesList.includes(selectedWord[0].toUpperCase() + selectedWord.slice(1))) {
-                    //console.log(selectedWord);
-                    selectedSpan.append(document.createTextNode(' ' + selectedWord[0].toUpperCase() + selectedWord.slice(1)));
-                } else if (selectedWord == 0) {
-                    selectedSpan.append(document.createElement('br'));
-                } else {
-                    selectedSpan.append(document.createTextNode(' ' + selectedWord));
-                    //console.log(selectedWord[0].toUpperCase() + selectedWord.slice(1));
-                }
-
-                // if (this word is followed by a newline) {
-                    // selectedSpan.append(document.createTextNode('\n');
-                //}
-              }
-
             });
-
         });
-
         </script>
         <div id="fanwork">
             <h1> Insert matches here </h1>
