make script responsive to bin size slider

--- a/index.html
+++ b/index.html
@@ -304,18 +304,39 @@ Jedi
 
             var slider = document.getElementById('input');
             var slideTest = document.createElement('input');
+            slideTest.id = 'sliderWidget';
             slideTest.setAttribute('type','range');
             slideTest.setAttribute('min','5');
             slideTest.setAttribute('max','1000');
             slideTest.setAttribute('step','5');
             slideTest.setAttribute('value','100');
             slideTest.oninput = function () {
-                console.log(this.value);
+                //remove script section highlighting from previous bin size
+                var highlights = document.getElementsByClassName('highlight');
+                for (var c = 0; c < highlights.length; c++) {
+                    highlights[c].setAttribute('class','script-section');
+                }
+
+                //print current slider value
                 var out = document.getElementById('output');
                 out.innerHTML = 'Words per script section: ' + this.value;
-                indepDim = independentAxis(cfTable, chart, "ORIGINAL_SCRIPT_WORD_INDEX",slideTest.value)
+
+
+                //remake plot with new bin size
+                indepDim = independentAxis(cfTable, chart, "ORIGINAL_SCRIPT_WORD_INDEX", slideTest.value);
                 dependentAxis(indepDim, chart, sel.options[sel.selectedIndex].value);
-                indepDim.dispose();
+                indepDim.dispose(); //get rid of the dimension b/c of 32 dim max
+
+                var selection = this.value;
+                var callback = function (val) {
+                    if (val == document.getElementById('sliderWidget').value) {
+                        document.getElementById('script').innerHTML = ''; //remove previous version of scriont
+                        renderScript(); //rewrite script with new bin size/script section sizes
+                    }
+                }
+                setTimeout(callback, 1500, selection);
+                //document.getElementById('script').innerHTML = ''; //remove previous version of scriont
+                //renderScript(); //rewrite script with new bin size/script section sizes
             }
             slider.appendChild(slideTest);
             document.getElementById('output').innerHTML = 'Words per script section: ' + slideTest.value;
@@ -323,60 +344,64 @@ Jedi
             //default chart rendered onload; 1 is positive match as y-axis
             dependentAxis(indepDim, chart, keys[1]);
 
-            d3.csv('data.csv', function(data) {
-                var binSize = 100;
-                var wordCount =  data [(data.length-1)]["ORIGINAL_SCRIPT_WORD_INDEX"];
-                //var sectionCount = data [(data.length-1)]["SCRIPT_SECTION"];
-                var sectionCount = Math.floor(wordCount/binSize) + 1;
-                var sectionedScript = document.getElementById('script');
+            var renderScript = function () {
+                d3.csv('data.csv', function(data) {
+                    var binSize = document.getElementById('sliderWidget').value;
+                    var wordCount =  data [(data.length-1)]["ORIGINAL_SCRIPT_WORD_INDEX"];
+                    //var sectionCount = data [(data.length-1)]["SCRIPT_SECTION"];
+                    var sectionCount = Math.floor(wordCount/binSize) + 1;
+                    var sectionedScript = document.getElementById('script');
 
-                //for script formatting
-                var punctuation  = [',', '.', '!', '?', '\''];
-                var endpunctuation =  ['.', '!', '?'];
-                var contractions = ['\'ve', '\'m', '\'ll', '\'re', '\'s', '\'t', 'n\'t', 'na'];
-                var capitals = ['i'];
-                var namesString = document.getElementById('characters').innerText;
-                var namesList = namesString.split(/(\s+)/);
+                    //for script formatting
+                    var punctuation  = [',', '.', '!', '?', '\''];
+                    var endpunctuation =  ['.', '!', '?'];
+                    var contractions = ['\'ve', '\'m', '\'ll', '\'re', '\'s', '\'t', 'n\'t', 'na'];
+                    var capitals = ['i'];
+                    var namesString = document.getElementById('characters').innerText;
+                    var namesList = namesString.split(/(\s+)/);
 
-                for (var i = 0; i < sectionCount + 1; i++) {
-                    var sectionSpan = document.createElement('span');
-                    sectionSpan.setAttribute('class', 'script-sections');
-                    sectionSpan.setAttribute('id', 'script-section-' + i);
-                    sectionedScript.append(sectionSpan);
-                }
-
-                for (var j = 0; j < wordCount; j++) {
-                    var selectedWord = data [j]["ORIGINAL_SCRIPT_WORD"];
-                    //test for empty words
-                    if (selectedWord == '') {
-                        selectedWord = data [j]["LOWERCASE"];
+                    for (var i = 0; i < sectionCount + 1; i++) {
+                        var sectionSpan = document.createElement('span');
+                        sectionSpan.setAttribute('class', 'script-sections');
+                        sectionSpan.setAttribute('id', 'script-section-' + i);
+                        sectionedScript.append(sectionSpan);
                     }
 
-                    var wordIndex = data [j]["ORIGINAL_SCRIPT_WORD_INDEX"];
-                    var section = Math.floor(wordIndex / binSize);
-                    //var section = data [j]["SCRIPT_SECTION"];
-                    var selectedSpan = document.getElementById('script-section-' + section);
+                    for (var j = 0; j < wordCount; j++) {
+                        var selectedWord = data [j]["ORIGINAL_SCRIPT_WORD"];
+                        //test for empty words
+                        if (selectedWord == '') {
+                            selectedWord = data [j]["LOWERCASE"];
+                        }
 
-                    //speaker tags
-                    if (j != 0 && (data [j]["CHARACTER"] != data [j-1]["CHARACTER"])) {
-                        selectedSpan.append(document.createElement('br')); //add newline
-                        selectedSpan.append(document.createTextNode(' ' + data [j]["CHARACTER"] + ': '));
-                    }
+                        var wordIndex = data [j]["ORIGINAL_SCRIPT_WORD_INDEX"];
+                        var section = Math.floor(wordIndex / binSize);
+                        //var section = data [j]["SCRIPT_SECTION"];
+                        var selectedSpan = document.getElementById('script-section-' + section);
 
-                    //formatting
-                    if (punctuation.includes(selectedWord) || contractions.includes(selectedWord)) {  //no space before punctuation
-                        selectedSpan.append(document.createTextNode(selectedWord));
-                    } else if (j != 0 && endpunctuation.includes(data [j-1]["ORIGINAL_SCRIPT_WORD"])) { //capitalize first word of sentence
-                        selectedSpan.append(document.createTextNode(' ' + selectedWord[0].toUpperCase() + selectedWord.slice(1)));
-                    } else if (capitals.includes(selectedWord) || j == 0) { //format things like 'i'
-                        selectedSpan.append(document.createTextNode(' ' + selectedWord.toUpperCase()));
-                    } else if (namesList.includes(selectedWord[0].toUpperCase() + selectedWord.slice(1))) { //format names
-                        selectedSpan.append(document.createTextNode(' ' + selectedWord[0].toUpperCase() + selectedWord.slice(1)));
-                    } else {
-                        selectedSpan.append(document.createTextNode(' ' + selectedWord)); //all other words
+                        //speaker tags
+                        if (j != 0 && (data [j]["CHARACTER"] != data [j-1]["CHARACTER"])) {
+                            selectedSpan.append(document.createElement('br')); //add newline
+                            selectedSpan.append(document.createTextNode(' ' + data [j]["CHARACTER"] + ': '));
+                        }
+
+                        //formatting
+                        if (punctuation.includes(selectedWord) || contractions.includes(selectedWord)) {  //no space before punctuation
+                            selectedSpan.append(document.createTextNode(selectedWord));
+                        } else if (j != 0 && endpunctuation.includes(data [j-1]["ORIGINAL_SCRIPT_WORD"])) { //capitalize first word of sentence
+                            selectedSpan.append(document.createTextNode(' ' + selectedWord[0].toUpperCase() + selectedWord.slice(1)));
+                        } else if (capitals.includes(selectedWord) || j == 0) { //format things like 'i'
+                            selectedSpan.append(document.createTextNode(' ' + selectedWord.toUpperCase()));
+                        } else if (namesList.includes(selectedWord[0].toUpperCase() + selectedWord.slice(1))) { //format names
+                            selectedSpan.append(document.createTextNode(' ' + selectedWord[0].toUpperCase() + selectedWord.slice(1)));
+                        } else {
+                            selectedSpan.append(document.createTextNode(' ' + selectedWord)); //all other words
+                        }
                     }
-                }
-            });
+                });
+            }
+
+            renderScript();
         });
         </script>
         <div id="fanwork">
